Doing placing order remove items and user session. fixing UI layout stretch to width 100% on productswhen selected by category

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -237,10 +237,11 @@ h2 {
 /* ── Cards Grid ── */
 .content {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(250px, 250px));
   gap: 15px;
   width: 100%;
-  margin: 0 auto;
+  justify-content: center;
+  /* margin: 0 auto; */
   margin-top: 30px;
   padding: 15px;
 }
